# crudcrate-example

./: Cargo.toml  Dockerfile  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250217_105133_first_migration.rs
src/: config.rs  main.rs
src/common/: models.rs  views.rs
src/routes/: mod.rs  todo.rs
src/routes/todo/: db.rs  models.rs  views.rs
