[package]
name = "crudcrate-example"
version = "0.2.0"
edition = "2024"
description = "An example API implementing crudcrate"
license = "MIT"
readme = "README.md"
repository = "https://github.com/evanjt/crudcrate-example"
keywords = ["data", "api", "axum", "sea-orm", "crud"]
categories = ["web-programming", "database"]

[workspace]
members = [".", "migration"]

[dependencies]
axum = { version = "0.8.0" }
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
# crudcrate = "0.2.4"
crudcrate = { path = "../crudcrate" }
crudcrate-derive = { path = "../crudcrate-derive" }
hyper = "1.6.0"
migration = { path = "migration" }
sea-orm = { version = "1.1.6", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.1.13"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.13.2", features = ["serde", "v4", "fast-rng"] }


[lints.clippy]
pedantic = "warn"
