[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = "1.10.0"

[dependencies.sea-orm-migration]
version = "1.0.0"
features = [
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-postgres",        # `DATABASE_DRIVER` feature
]
